# resume-analyzer

./: .gitignore  app.py  create_job.py  database.py  pyproject.toml
google_drive /: authenticate.py  download_resumes.py
schemas/: analysis.py  files.py  job.py  resume.py
